# django-channels-test-repo

./: README.md  pyproject.toml  tox.ini
backend/backend/: settings.py  urls.py
backend/cli/: __init__.py  config.py
backend/core/: conftest.py  consumers.py  models.py  test_consumers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
