[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
packages = [
    { include = "cli", from = "backend" },
]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = "^3.9.2"
django = "^2.2b1"
dj-database-url = "0.4.2"
psycopg2 = "2.7.3.2"
click = "^7.0"
channels = "^2.2"
channels_redis = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.4.0"
pytest-django = "^3.1.2"
pytest-asyncio = "^0.10.0"

[tool.poetry.scripts]
yak = 'cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
